[package]
name = "absolute-fi"
version = "0.1.0"
authors = ["Absolute.Fi"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
cw20 = "0.13.2"
cw20-base = "0.13.2"
cw-controllers = "0.13.2"
cw-asset = "2.0.0"
cw-utils = "0.13.2"

schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

num-derive = "0.3.3"
num-traits = "0.2.15"
cosmwasm-schema = "1.5.0"

[dev-dependencies]
rand = "0.8.5"
cw-multi-test = "0.13.2"
cw20-base = "0.13.2"
